--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
-    <h1> Odin Recipes </h1>
+
+<h1> Odin Recipes </h1>
 
 <body>
 
     <ul>
+        
+   <li><a href="./Recipe/biscotti.html"> Biscotti </a></li>
 
-   <li><a href="file:///home/riley/odin-recipes/Recipe/biscotti.html"> Biscotti </a></li>
-
-    <li><a href="file:///home/riley/odin-recipes/Recipe/macaroon.html"> Macaroons</a></li>
+   <li><a href="./Recipe/macaroon.html"> Macaroons</a></li>
 
     </ul>
-    
+
 </body>
 
 </html>
