--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
 
 
-<h1> Odin Recipes </h1>
+<h1> Odin Recipessss </h1>
 
 <body>
 
-    <ul>
-        
-   <li><a href="./Recipe/biscotti.html"> Biscotti </a></li>
+<ul>
+       
+ <li><a href="./Recipe/biscotti.html"> Biscottiiiiiiii </a></li>
 
-   <li><a href="./Recipe/macaroon.html"> Macaroons</a></li>
+ <li> <a href="./Recipe/macaroon.html"> Macaroons</a></li>
 
-    </ul>
-
+</ul>
 </body>
 
 </html>
