--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 
-<h1> Odin Recipessss </h1>
+<h1> Odin Recipes </h1>
 
 <body>
 
 <ul>
        
- <li><a href="./Recipe/biscotti.html"> Biscottiiiiiiii </a></li>
+ <li><a href="./recipes/biscotti.html"> Biscotti </a></li>
 
- <li> <a href="./Recipe/macaroon.html"> Macaroons</a></li>
+ <li><a href="./recipes/macaroon.html"> Macaroons</a></li>
 
 </ul>
 </body>
