--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <ul>
        
- <li><a href="file:///home/riley/odin-recipes/recipes/biscotti.html"> Biscotti </a></li>
+ <li><a href="file:///home/riley/odin-recipes/recipes/biscotti.html"> Biscottiii </a></li>
 
  <li><a href="./recipes/macaroon.html"> Macaroons</a></li>
 
