--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <ul>
        
- <li><a href="biscotti.html"> Biscottiii </a></li>
+ <li><a href="./recipes/biscotti.html"> Biscotti </a></li>
 
- <li><a href="./recipes/macaroon.html"> Macaroons</a></li>
+ <li><a href="./recipes/macaroon.html"> Macaroon </a></li>
 
 </ul>
 </body>
